--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,14 +3,10 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-body {
-    padding-left: 23px;
-}
-
 .header {
     background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right, left;
+    background-position: bottom right, 20px 0;
 }
 
 .text-primary {
@@ -86,21 +82,23 @@ main {
     margin: 130px auto;
 }
 
-/* about section style */
+/* About section style */
 .about {
-
-
     text-align: center;
-    background: #FFF8F3;
+    background-color: #FFF8F3;
     border-radius: 10px;
-    padding: 130px 155px;
+    padding: 130px 150px;
 }
 
-.about-title {
+.about-title,
+.what-i-do-title {
     margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 35px;
 }
 
-.about-description {
+.about-description,
+.what-i-do-description {
     color: #757575;
 }
 
@@ -108,4 +106,139 @@ table {
     width: 75%;
     margin: 30px auto;
     ;
+}
+
+/* what-i-do section style */
+.what-i-do {
+    margin-top: 130px;
+}
+
+.what-i-do-title {
+    font-weight: 700;
+    font-size: 35px;
+}
+
+.what-i-do-title,
+.what-i-do-description {
+    text-align: center;
+}
+
+.skills-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+
+.skill {
+    width: 200px;
+    height: 320px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    line-height: 28px;
+    color: #757575;
+
+}
+
+/* resume section style */
+.resume-title {
+    font-weight: 700;
+    font-size: 35px;
+}
+
+.resume-content {
+    display: flex;
+    gap: 36px;
+}
+
+.resume-header {
+    text-align: center;
+    font-weight: 700;
+    font-size: 35px;
+    margin-top: 130px;
+    margin-bottom: 113px;
+}
+
+.resume-title {
+    font-size: 30px;
+}
+
+.resume-item {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.resume-item-title {
+    font-size: 25px;
+}
+
+.resume-item-subtitle {
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.resume-item-details {
+    line-height: 28px;
+    color: #757575;
+    margin-bottom: 30px;
+}
+
+.resume-btn {
+    text-align: center;
+}
+
+/* contact section */
+.contact {
+    display: flex;
+    gap: 100px;
+    background-color: #FFF8F3;
+    padding: 130px 200px;
+}
+
+.contact-info {
+    width: 50%;
+}
+
+.contact-form {
+    width: 50%;
+}
+
+.contact-title {
+    font-size: 35px;
+    margin-bottom: 28px;
+    ;
+}
+
+.contact-description {
+    color: #474747;
+}
+
+.contact input[type='text'],
+input[type='email'],
+textarea {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    border: none;
+    margin-bottom: 24px;
+}
+
+.social-div {
+    margin-top: 20px;
+}
+
+.social-div a {
+    margin-right: 20px;
 }
