--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -35,6 +35,18 @@ nav {
     font-size: 20px;
 }
 
+.btn-phone {
+    margin-left: 10px;
+    height: 64px;
+    background-color: white;
+    color: #FD6E0A;
+    border: 1px solid #FD6E0A;
+    padding: 18px 35px;
+
+    border-radius: 5px;
+    font-size: 20px;
+}
+
 nav ul {
     display: flex;
     align-items: center;
@@ -241,4 +253,8 @@ textarea {
 
 .social-div a {
     margin-right: 20px;
+}
+
+.margin-left {
+    margin-left: 10px;
 }
